# flatwiki

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
flatwiki/: __main__.py  cli.py  core.py
