[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flatwiki"
readme = "README.md"
version = "0.1.1"
description = "A lightweight wiki engine without databases"
dependencies = [
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "blinker==1.9.0",
    "cffi==2.0.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "flask==3.1.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "pycparser==3.0",
    "pyyaml==6.0.3",
    "waitress==3.0.2",
    "webencodings==0.5.1",
    "werkzeug==3.1.8",
]

[project.scripts]
flatwiki = "flatwiki.cli:main"

[tool.setuptools]
packages = ["flatwiki"] 
